# xlw-cmake-fork

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.org  XLWFunctions.cmake  Xlw-5.0.2f0.chm  build.bat  install-mingw.bat  install.bat
InterfaceGenerator/: CMakeLists.txt  main.cpp
Template_Projects/codeblocks-gcc/: Template.cbp
Template_Projects/gcc-make/: BuildHelp.bat
Template_Projects/vc10/: XLL.vcxproj
Template_Projects/vc11/: RunInterfaceGenerator.vcxproj  Template.sln  XLL.vcxproj
Template_Projects/vc12/source/: xlwWrapper.cpp
Template_Projects/vc7/: BuildHelp.bat  RunInterfaceGenerator.vcproj  Template.sln  XLL.vcproj
Template_Projects/vc8/: BuildHelp.bat  RunInterfaceGenerator.vcproj  Template.sln  XLL.vcproj
Template_Projects/vc9/: BuildHelp.bat  RunInterfaceGenerator.vcproj  Template.sln  XLL.vcproj
examples/: README.org
examples/Commands and Attributes/codeblocks-gcc/: RunInterfaceGenerator.mak  SecondExample.cbp
examples/Commands and Attributes/common_source/: Attributes.cpp  Attributes.h  Commands.cpp  Commands.h  xlwAttributes.cpp  xlwCommands.cpp
examples/Handwritten/: CMakeLists.txt
examples/Handwritten/codeblocks-gcc/: ExampleHandwritten.cbp  ExampleHandwritten.workspace
examples/Handwritten/common_source/: xlwCommands.cpp
examples/LoggerDemo/: CMakeLists.txt  build-msvc.bat
examples/LoggerDemo/codeblocks-gcc/: logger.cbp
examples/LoggerDemo/src/: xlwTest.cpp
examples/MJ - Design Patterns/: CMakeLists.txt
examples/MJ - Design Patterns/codeblocks-gcc/: Payoff.cbp
examples/MJ - Design Patterns/common_source/: Test.cpp  Test.h
examples/MJ - Design Patterns/src/: xlwTest.cpp
examples/ObjectCacheDemo/: CMakeLists.txt
examples/ObjectCacheDemo/codeblocks-gcc/: ObjectCacheDemo.cbp
examples/ObjectCacheDemo/src/: xlwWrapper.cpp
examples/Start Here - Example/: CMakeLists.txt  build-msvc.bat  build-ninja.bat
examples/Start Here - Example/codeblocks-gcc/: BuildHelp.bat  FirstExample.cbp
examples/Start Here - Example/common_source/: xlwTest.cpp
examples/Typeregister/: CMakeLists.txt
examples/Typeregister/codeblocks-gcc/: TypeRegDemo.cbp
examples/sample-project/: CMakeLists.txt  build.bat  mylib.cpp
include/xlw/: Win32StreamBuf.inl  XlfOperProperties12.inl  XlfOperProperties4.inl  XlfOperPropertiesDynamic.inl  XlfRef.inl  xlw.def
template-project/: CMakeLists.txt
template-project/source/: source.cpp
tools/: CMakeLists.txt
xlcall32stub/: xlcall32.def
xll_test1/: CMakeLists.txt.back  mylib.h  xlwmylib.cpp
xll_test1/lib/: mylib.lib
xlw-lib-addin/: CMakeLists.txt
xlw/include/xlw/: XlfExcel.h
xlw/src/: XlfExcel.cpp
xlw/xlcall32stub/: xlcall32gcc.def
